# smart_tablet

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  commands_en.json  forge.config.js  package-lock.json  package.json  settingsOld.json
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: clock.ts  contentPanel.ts  globalData.ts  helpers.ts  index.ts  style.css
frontend/src/api-types/: settings.ts  weather.ts
frontend/src/clock/: clock.template.html  clock.ts
frontend/src/weather/: weather.template.html  weather.ts
lib/: index.js  renderer.js
native/: Cargo.toml
native/src/: lib.rs
src/: main.rs  message.rs  service.rs  settings.rs
src/news/: mod.rs  rss_news.rs
src/voice/: command.rs  mod.rs  number.rs
src/weather/: mod.rs  openweather.rs
static/: index.html
