[package]
name = "smart_tablet"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = ["static_ssl"]
static_ssl = ["openssl/vendored"]

[dependencies]
actix-web = "4.0.0-beta.8"
actix-files = "0.6.0-beta.6"
chrono = { version = "0.4", features = ["serde"] }
deepspeech = "0.9"
lazy_static = "1.4" 
openssl = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.6"
