[package]
name = "smart_tablet"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = ["static_ssl"]
static_ssl = ["openssl/vendored"]

[dependencies]
actix = "0.12"
actix-files = "0.6.0"
actix-rt = "2.0"
async-trait = "0.1"
actix-web = "4.0.1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
cpal = "0.13"
deepspeech = "0.9"
dyn-clone = "1.0"
erased-serde = "0.3"
lazy_static = "1.4" 
futures = "0.3"
openssl = "0.10"
reqwest = { version = "0.11", features = ["json"] }
rss = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.8", features = ["sync", "macros"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.15"
webrtc-vad = "0.4"
