[package]
name = "smart_tablet"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "smart_tablet"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
